# lablab-tool-face-off

./: .gitignore  main.py  pyproject.toml  vercel.json
backend/: Dockerfile  README.md  main.py  pyproject.toml  tru.py
backend/app/: main.py  tru.py
backend/app/utils/: classify.py  load_documents.py  query.py  to_cohere_docs.py  transcripts.py  trulens_feedbacks.py
backend/utils/: classify.py  query.py  transcripts.py  trulens_app.py
frontend/: package-lock.json  package.json  vercel.json
frontend/src/components/: chat-display.tsx  citations-list.tsx  video-inserter.tsx
frontend/src/components/chatbot/: chat-avatar.tsx  chat-input.tsx  chat-item.tsx  chat-messages.tsx
frontend/src/context/: app-context.tsx  use-app.tsx
frontend/src/hooks/: chat.ts
frontend/src/lib/: axios.ts
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/styles/: globals.css
utils/: classify.py  load_documents.py  query.py  transcripts.py  trulens_app.py  trulens_feedbacks.py
